HOPE-83 fixed text color contrast issue on mobile

--- a/src/app/pages/help-me-find/help-me-find.page.scss
+++ b/src/app/pages/help-me-find/help-me-find.page.scss
@@ -42,7 +42,7 @@
       color:var(--lynxDkOrange);
     }
 
-    ion-card-content.card-content-md {
+    ion-card-content {
 
       color: var(--lynxWhite);
       //padding: size(2) size(4) size(1);
